--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,10 @@
     "angular": "~1.3.15",
     "angular-resource": "~1.3.15",
     "bootstrap": "~3.3.0",
-    "lodash": "~3.8.0"
+    "lodash": "~3.8.0",
+    "components-font-awesome": "4.3.0",
+    "angular-route": "~1.3.15",
+    "angular-translate": "~2.7.0",
+    "angular-translate-loader-static-files": "~2.7.0"
   }
 }
