Fitnesse dependency added.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.fitnesse</groupId>
+            <artifactId>fitnesse</artifactId>
+            <version>20151230</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
